--- a/packages/ui-inner-shared/package.json
+++ b/packages/ui-inner-shared/package.json
@@ -10,5 +10,9 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
+  },
+  "peerDependencies": {
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
   }
 }
