--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "./src/index.js",
   "exports": {
-    ".": "./src/index.js"
+    ".": "./src/client/index.js",
+    "./client": "./src/client/index.js",
+    "./server": "./src/server/index.js"
   }
 }
