--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "packageManager": "pnpm@9.12.1",
   "engines": {
-    "node": "20.x"
+    "node": ">=20.10.0"
   },
   "scripts": {
     "dev": "pnpm run dev:all",
