--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "multisite",
   "private": true,
-  "packageManager": "pnpm@9.12.1",
+  "packageManager": "pnpm@9.15.4",
   "engines": {
-    "node": ">=20.10.0"
-  },
+    "node": "20.x"
+    },
   "scripts": {
     "dev": "pnpm run dev:all",
     "dev:aamir": "pnpm --filter aamir dev",
