--- a/packages/server-api/package.json
+++ b/packages/server-api/package.json
@@ -1,25 +1,21 @@
 {
   "name": "server-api",
   "private": true,
-  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "seed": "node prisma/seed.js",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.2",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
-    "zod": "^3.23.8"
+    "pg": "^8.17.2",
+    "pg-connection-string": "^2.10.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prisma": "^6.0.0"
+    "nodemon": "^3.1.11"
   }
 }
