--- a/apps/admin/vercel.json
+++ b/apps/admin/vercel.json
@@ -1,5 +1,9 @@
 {
   "rewrites": [
+    {
+      "source": "/admin/(.*)",
+      "destination": "https://multisite-server-api.onrender.com/admin/$1"
+    },
     { "source": "/(.*)", "destination": "/" }
   ]
 }
