--- a/apps/aamir/package.json
+++ b/apps/aamir/package.json
@@ -3,19 +3,22 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
+
   "dependencies": {
-    "@multisite/ui-inner-shared": "workspace:*",
-    "@multisite/sdk": "workspace:*",
+    "@multisite/ui-inner-shared": "0.0.0",
+    "@multisite/sdk": "0.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0"
   },
+
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
