--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
   "name": "multisite",
   "private": true,
-
-  "packageManager": "pnpm@9.15.3",
-
   "engines": {
     "node": "20.x"
   },
-
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "pnpm run dev:all",
-    "dev:aamir": "pnpm --filter aamir dev",
-    "dev:umair": "pnpm --filter umair dev",
-    "dev:main": "pnpm --filter main dev",
-    "dev:admin": "pnpm --filter admin dev",
-    "dev:server": "pnpm --filter server-api dev",
-    "dev:all": "pnpm -r --parallel --filter aamir --filter umair --filter main --filter admin --filter server-api dev",
-    "install:clean": "rimraf node_modules apps/**/node_modules packages/**/node_modules pnpm-lock.yaml && pnpm install"
+    "dev": "npm run dev:all",
+    "dev:aamir": "npm run dev --workspace=apps/aamir",
+    "dev:umair": "npm run dev --workspace=apps/umair",
+    "dev:main": "npm run dev --workspace=apps/main",
+    "dev:admin": "npm run dev --workspace=apps/admin",
+    "dev:server": "npm run dev --workspace=packages/server-api",
+    "dev:all": "concurrently -n aamir,umair,main,admin,server \"npm run dev:aamir\" \"npm run dev:umair\" \"npm run dev:main\" \"npm run dev:admin\" \"npm run dev:server\""
   },
-
-  "dependencies": {
-    "bcryptjs": "^3.0.3"
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
