--- a/apps/admin/vercel.json
+++ b/apps/admin/vercel.json
@@ -1,8 +1,9 @@
 {
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://multisite-server-api.onrender.com/:path*"
-    }
+      "source": "/api/(.*)",
+      "destination": "https://multisite-server-api.onrender.com/$1"
+    },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
