--- a/packages/server-api/package.json
+++ b/packages/server-api/package.json
@@ -7,12 +7,14 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
+    "node-fetch": "^3.3.2",
     "pg": "^8.17.2",
     "pg-connection-string": "^2.10.1"
   },
