--- a/apps/admin/.env
+++ b/apps/admin/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL="http://localhost:5050"
-# VITE_API_BASE_URL=https://multisite-server-api.onrender.com
+# VITE_API_BASE_URL="http://localhost:5050"
+VITE_API_BASE_URL=https://multisite-server-api.onrender.com
