--- a/packages/server-api/package.json
+++ b/packages/server-api/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "server-api",
+   "name": "server-api",
   "private": true,
   "type": "module",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "node src/server.js",
+    "start": "node src/server.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0",
