--- a/apps/umair/vercel.json
+++ b/apps/umair/vercel.json
@@ -2,8 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://multisite-server-api.onrender.com/:path*"
-    },
-    { "source": "/(.*)", "destination": "/" }
+      "destination": "https://multisite-server-api.vercel.app/:path*"
+    }
   ]
 }
