--- a/packages/server-api/vercel.json
+++ b/packages/server-api/vercel.json
@@ -1,5 +1,3 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/src/app.js" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/index" }]
 }
