--- a/apps/admin/vercel.json
+++ b/apps/admin/vercel.json
@@ -1,4 +1,8 @@
 {
-  "source": "/api/(.*)",
-  "destination": "https://multisite-server-api.vercel.app/:path*"
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://multisite-server-api.vercel.app/:path*"
+    }
+  ]
 }
