--- a/apps/aamir/vercel.json
+++ b/apps/aamir/vercel.json
@@ -3,6 +3,7 @@
     {
       "source": "/api/:path*",
       "destination": "https://multisite-server-api.vercel.app/:path*"
-    }
+    },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
