--- a/apps/aamir/vercel.json
+++ b/apps/aamir/vercel.json
@@ -4,6 +4,9 @@
       "source": "/api/:path*",
       "destination": "https://multisite-server-api.vercel.app/:path*"
     },
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
