--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "build:main": "npm run build --workspace=apps/main",
   "build:admin": "npm run build --workspace=apps/admin",
 
+  "dev:kundler2": "npm run dev --workspace=apps/kundler2",
+  "build:kundler2": "npm run build --workspace=apps/kundler2",
+
   "dev:all": "concurrently -n aamir,umair,main,admin,server \"npm run dev:aamir\" \"npm run dev:umair\" \"npm run dev:main\" \"npm run dev:admin\" \"npm run dev:server\""
 },
 
