--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-  "installCommand": "npm install",
-  "buildCommand": "npm run build"
-}
-{
-  "framework": null
+  "framework": null,
+  "installCommand": "npm install"
 }
